updating xapian to the latest version

--- a/data/popup/index.css
+++ b/data/popup/index.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   font-family: "Helvetica Neue",Helvetica,sans-serif;
   font-size: 13px;
+  background-color: #f7f7f7;
 }
 header {
   display: flex;
@@ -37,6 +38,7 @@ h2 {
   width: 500px;
   border-radius: 24px;
   overflow: hidden;
+  background-color: #fff;
 }
 #search:hover {
   box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
