--- a/v3/data/popup/index.css
+++ b/v3/data/popup/index.css
@@ -1,4 +1,5 @@
 :root {
+  --fg: #444;
   --bg-color: #fdfdfd;
   --code-bg: rgba(0, 0, 0, 0.05);
   --search: #4d5156;
@@ -29,6 +30,7 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
+    --fg: #c5c5c5;
     --bg-color: #35363a;
     --search: #f0f3f4;
     --search-bg: #202124;
@@ -55,6 +57,7 @@ body {
   margin: 0;
   font-family: "Helvetica Neue", Helvetica, sans-serif;
   font-size: 13px;
+  color: var(--fg);
   background-color: var(--bg-color);
 }
 body[data-mode=sidebar] {
@@ -88,6 +91,36 @@ code {
 }
 b {
   color: var(--highlight-color);
+}
+button {
+  cursor: pointer;
+}
+
+[type=checkbox] {
+  width: 30px;
+  height: 15px;
+  background-color: var(--info-bg);
+  -webkit-appearance: none;
+  border: 0;
+  outline: 0;
+  transition: background 300ms;
+  cursor: pointer;
+  margin: 0;
+}
+[type=checkbox]::before {
+  content: "";
+  display: block;
+  width: inherit;
+  height: inherit;
+  background-size: contain;
+  box-shadow: inset 0 0 0 1px #ccd3d8;
+  box-shadow: none;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 24 24'%3E %3Cpath d='M15.88 8.29L10 14.17l-1.88-1.88a.996.996 0 1 0-1.41 1.41l2.59 2.59c.39.39 1.02.39 1.41 0L17.3 9.7a.996.996 0 0 0 0-1.41c-.39-.39-1.03-.39-1.42 0z' fill='%23fff'/%3E %3C/svg%3E");
+}
+[type=checkbox]:checked {
+  background-color: dodgerblue;
 }
 
 #faqs {
@@ -146,10 +179,18 @@ b {
 }
 #info-bar {
   display: grid;
-  grid-template-columns: min-content min-content 1fr;
+  grid-template-columns: min-content min-content min-content 1fr;
   grid-gap: 10px;
   padding: 0 20px;
 }
+#info-bar div.select {
+  white-space: nowrap;
+}
+
+body[data-size="0"] #info-bar .select {
+  visibility: hidden;
+}
+
 #info {
   font-size: small;
   color: var(--info-bg);
@@ -158,6 +199,17 @@ b {
   text-overflow: ellipsis;
   text-align: right;
 }
+body[data-menu=true] #info {
+  display: none;
+}
+
+#tools {
+  text-align: right;
+}
+body[data-menu=false] #tools {
+  display: none;
+}
+
 #results {
   overflow: auto;
   margin: 10px 0 20px 0;
@@ -167,7 +219,7 @@ b {
   border-top: solid 1px var(--empty-results-border);
 }
 #results:empty::before,
-#results[data-size="0"]::before {
+body[data-size="0"] #results::before {
   display: flex;
   width: calc(100% - 30px);
   padding: 0 15px;
@@ -179,7 +231,7 @@ b {
 #results:empty::before {
   content: attr(data-empty);
 }
-#results[data-size="0"]::before {
+body[data-size="0"] #results::before {
   content: 'no match in your tabs!';
 }
 .result {
@@ -191,7 +243,7 @@ b {
 .result input[type=radio]:checked ~ a > h2::before {
   content: '';
   margin-left: -12px;
-  margin-right: 7px;
+  margin-right: -3px;
   width: 0;
   height: 0;
   border-top: 5px solid transparent;
@@ -205,6 +257,7 @@ b {
 .result a h2 {
   display: flex;
   align-items: center;
+  gap: 10px;
 }
 .result.sub a h2 {
   font-size: 100%;
@@ -248,13 +301,11 @@ body[data-engine=lunr] span[data-id="deep-search"] {
 }
 .result img {
   width: 16px;
-  margin-right: 5px;
   background-color: var(--img-bg);
 }
 .result h2 span[data-id="type"],
 .result h2 span[data-id="number"],
 .result h2 code {
-  margin-left: 10px;
   color: var(--result-span);
   padding: 1px 5px;
   font-size: 11px;
